--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Dictionary API</h1>
-<p>URL Format: https://127.0.0.1:5000/api/v1/word</p>
-<p>URL Example: https://127.0.0.1:5000/api/v1/beans</p>
+<p>URL Format: http://127.0.0.1:5000/api/v1/word</p>
+<p>URL Example: http://127.0.0.1:5000/api/v1/beans</p>
 </body>
 </html>
